Increased JVM permgen space in project.clj